--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import-normalize; /* bring in normalize.css styles */
+@import 'normalize.css';
+@import './styles/style.scss';
+
+/* @import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/icons/lib/css/blueprint-icons.css"; */
 
 body {
   margin: 0;
